--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "files.associations": {
     "utils.h": "c",
     "types.h": "c",
-    "history.h": "c"
+    "history.h": "c",
+    "stat.h": "c",
+    "unistd.h": "c"
   }
 }
