--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "types.h": "c",
     "history.h": "c",
     "stat.h": "c",
-    "unistd.h": "c"
+    "unistd.h": "c",
+    "signal.h": "c"
   }
 }
